--- a/templates/hospital/index.html
+++ b/templates/hospital/index.html
@@ -141,7 +141,7 @@ facebook : fb.com/sumit.luv
         <h5>Contact</h5>
         <p class="footer-link mt-2">351 Alkapuri, Vadodara, 391410</p>
         <a href="#" class="footer-link">820-015-8462</a>
-        <a href="#" class="footer-link">lagadhirdivyesh2508@gmail.com</a>
+        <a href="#" class="footer-link">one.health@gmail.com</a>
 
        
       </div>
@@ -149,7 +149,7 @@ facebook : fb.com/sumit.luv
 
     <hr>
 
-    <p id="copyright">Copyright &copy; 2022 <a href="https://macodeid.com/" target="_blank">Divyesh Lagadhir</a>. All right reserved</p>
+    <p id="copyright">Copyright &copy; 2022 <a href="https://macodeid.com/" target="_blank">Kishan Kalavadia, Divyesh Lagdhir, Ashish Madan</a>. All right reserved</p>
   </div>
 </footer>
 
