--- a/templates/hospital/About_us.html
+++ b/templates/hospital/About_us.html
@@ -55,7 +55,7 @@ youtube : youtube.com/lazycoders
     <div class="container text-center wow fadeInUp">
       <nav aria-label="Breadcrumb">
         <ol class="breadcrumb breadcrumb-dark bg-transparent justify-content-center py-0 mb-2">
-          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item"><a href="home">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">About</li>
         </ol>
       </nav>
@@ -177,7 +177,51 @@ youtube : youtube.com/lazycoders
   </div>
 </div> <!-- .banner-home -->
 
+<footer class="page-footer">
+  <div class="container">
+      <div class="row px-md-3">
+          <div class="col-sm-6 col-lg-3 py-3">
+              <h5>Company</h5>
+              <ul class="footer-menu">
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Career</a></li>
+                  <li><a href="#">Editorial Team</a></li>
+                  <li><a href="#">Protection</a></li>
+              </ul>
+          </div>
+          <div class="col-sm-6 col-lg-3 py-3">
+              <h5>More</h5>
+              <ul class="footer-menu">
+                  <li><a href="#">Terms & Condition</a></li>
+                  <li><a href="#">Privacy</a></li>
+                  <li><a href="#">Advertise</a></li>
+                  <li><a href="#">Join as Doctors</a></li>
+              </ul>
+          </div>
+          <div class="col-sm-6 col-lg-3 py-3">
+              <h5>Our partner</h5>
+              <ul class="footer-menu">
+                  <li><a href="#">One-Fitness</a></li>
+                  <li><a href="#">One-Drugs</a></li>
+                  <li><a href="#">One-Live</a></li>
+              </ul>
+          </div>
+          <div class="col-sm-6 col-lg-3 py-3">
+              <h5>Contact</h5>
+              <p class="footer-link mt-2">351 Alkapuri, Vadodara, 391410</p>
+              <a href="#" class="footer-link">820-015-8462</a>
+              <a href="#" class="footer-link">one.health@gmail.com</a>
 
+
+          </div>
+      </div>
+
+      <hr>
+
+      <p id="copyright">Copyright &copy; 2022 <a href="https://macodeid.com/" target="_blank">Kishan Kalavadia, Divyesh Lagdhir, Ashish Madan</a>. All right reserved</p>
+          </div>
+  </div>
+</footer>
 
 <script src="../assets/js/jquery-3.5.1.min.js"></script>
 
