--- a/templates/hospital/contactus.html
+++ b/templates/hospital/contactus.html
@@ -1,41 +1,182 @@
-<!DOCTYPE html>
+{% extends 'hospital/homebase.html' %}
 {% load static %}
-<html lang="en" dir="ltr">
+<!---
+written By : sumit kumar
+facebook : fb.com/sumit.luv
+-->
+
+
+{% block content %}
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--Navbar.html -- head-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="copyright" content="MACode ID, https://macodeid.com/">
+    <title>One Health - Editing</title>
+    <link rel="stylesheet" href="{% static 'maicons.css'%}">
+    <link rel="stylesheet" href="{% static 'bootstrap.css'%}">
+    <link rel="stylesheet" href="{% static 'owl.carousel.css'%}">
+    <link rel="stylesheet" href="{% static 'animate.css'%}">
+    <link rel="stylesheet" href="{% static 'theme.css'%}">
 
-  <title>LazyCoder || sumit</title>
+
+    <script src="{% static 'jquery-3.5.1.min.js' %}"></script>
+    <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'owl.carousel.min.js' %}"></script>
+    <script src="{% static 'wow.min.js' %}"></script>
+    <script src="{% static 'theme.js' %}"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+    <style>
+        .column{
+            margin: 2.5%;
+        }
+        .row{
+            margin: 2%;
+        }
+        .doc{
+            margin: 10px 10%;
+        }
+
+        
+    </style>
 
 
 </head>
 
 <body>
 
-  {% include "hospital/navbar.html" %}
-  <br><br>
+    <!--About-us page content-->
+    <!-- .banner-home -->
+    <div class="page-banner overlay-dark bg-image" style="background-image: url('{% static "img1/bg_image_1.jpg" %}');">
+        <div class="banner-section">
+          <div class="container text-center wow fadeInUp">
+            <nav aria-label="Breadcrumb">
+              <ol class="breadcrumb breadcrumb-dark bg-transparent justify-content-center py-0 mb-2">
+                <li class="breadcrumb-item"><a href="home">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Contact</li>
+              </ol>
+            </nav>
+            <h1 class="font-weight-normal">Contact us</h1>
+          </div> <!-- .container -->
+        </div> <!-- .banner-section -->
+      </div> <!-- .page-banner -->
+    
 
-  <center>
-    <h3 class='alert alert-success'>Send Us Your Valuable Feedback !</h3>
+    
 
-    <form method="POST">
-      <!-- Very Important csrf Token -->
-      {% csrf_token %}
-      <div class="form-group">
-        <p>
-        <h3>{{ form.as_p }}</h3>
-        </p>
-        <br>
-        <input type="submit" value="Send Message" class='btn btn-primary btn-lg'>
+      <div class="page-section">
+        <div class="container">
+          <h1 class="text-center wow fadeInUp">Get in Touch</h1>
+    
+          <form class="contact-form mt-5">
+            <div class="row mb-3">
+              <div class="col-sm-6 py-2 wow fadeInLeft">
+                <label for="fullName">Name</label>
+                <input type="text" id="fullName" class="form-control" placeholder="Full name..">
+              </div>
+              <div class="col-sm-6 py-2 wow fadeInRight">
+                <label for="emailAddress">Email</label>
+                <input type="text" id="emailAddress" class="form-control" placeholder="Email address..">
+              </div>
+              <div class="col-12 py-2 wow fadeInUp">
+                <label for="subject">Subject</label>
+                <input type="text" id="subject" class="form-control" placeholder="Enter subject..">
+              </div>
+              <div class="col-12 py-2 wow fadeInUp">
+                <label for="message">Message</label>
+                <textarea id="message" class="form-control" rows="8" placeholder="Enter Message.."></textarea>
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary wow zoomIn">Send Message</button>
+          </form>
+        </div>
       </div>
-    </form>
-  </center>
-  {% include "hospital/footer.html" %}
-</body>
-<!--
+      
+
+    <div class="page-section banner-home bg-image" style="background-image: url('{% static "img1/banner-pattern.svg" %}');">
+        <div class="container py-5 py-lg-0">
+          <div class="row align-items-center">
+            <div class="col-lg-4 wow zoomIn">
+              <div class="img-banner d-none d-lg-block">
+                <img src="{% static "img1/mobile_app.png" %}" alt="">
+              </div>
+            </div>
+            <div class="col-lg-8 wow fadeInRight">
+              <h1 class="font-weight-normal mb-3">Get easy access of all features using One Health Application</h1>
+              <a href="#"><img src="{% static "img1/google_play.svg" %}" alt=""></a>
+              <a href="#" class="ml-2"><img src="{% static "img1/app_store.svg" %}" alt=""></a>
+            </div>
+          </div>
+        </div>
+      </div> <!-- .banner-home -->
+      
+    <!--end-->
+
+
+
+    <!--
 developed By : sumit kumar
 facebook : fb.com/sumit.luv
 youtube : youtube.com/lazycoders
 -->
 
-</html>
+
+    <br><br>
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row px-md-3">
+                <div class="col-sm-6 col-lg-3 py-3">
+                    <h5>Company</h5>
+                    <ul class="footer-menu">
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Career</a></li>
+                        <li><a href="#">Editorial Team</a></li>
+                        <li><a href="#">Protection</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-lg-3 py-3">
+                    <h5>More</h5>
+                    <ul class="footer-menu">
+                        <li><a href="#">Terms & Condition</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Advertise</a></li>
+                        <li><a href="#">Join as Doctors</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-lg-3 py-3">
+                    <h5>Our partner</h5>
+                    <ul class="footer-menu">
+                        <li><a href="#">One-Fitness</a></li>
+                        <li><a href="#">One-Drugs</a></li>
+                        <li><a href="#">One-Live</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-lg-3 py-3">
+                    <h5>Contact</h5>
+                    <p class="footer-link mt-2">351 Alkapuri, Vadodara, 391410</p>
+                    <a href="#" class="footer-link">820-015-8462</a>
+                    <a href="#" class="footer-link">one.health@gmail.com</a>
+
+
+                </div>
+            </div>
+
+            <hr>
+            <p id="copyright">Copyright &copy; 2022 <a href="https://macodeid.com/" target="_blank">Kishan Kalavadia, Divyesh Lagdhir, Ashish Madan</a>. All right reserved</p>
+          </div>
+           
+        </div>
+    </footer>
+
+
+
+    {% endblock content %}
+    <!-- footer.html footer-->
+
+    <!--end-->
+
+</body>
