--- a/templates/hospital/navbar.html
+++ b/templates/hospital/navbar.html
@@ -55,12 +55,11 @@
               <a class="nav-link" href="aboutus">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="doctors">Doctors</a>
+              <a class="nav-link" href="doctors">Info</a>
             </li>
-
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="contact">Contact</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="/doctorlogin">Doctor</a>
             </li>
